--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,9 @@
 .padding-top {
     padding-top: 64px;
 }
+.text-color {
+    text-decoration-color: #1abc9c;
+}
+.text-color:hover {
+    text-decoration-color: #1abc9c!important;
+}
